se agrega nmbre

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html lang="es">
 <head>
-  <title>Curriculum Vitae</title>
+  <title>Curriculum Vitae Mikee</title>
   <meta charset="utf-8" />
   <meta name="description" content="CV de Miguel Ramirez">
   <meta name="author" content="Mikee.rmz" />
