Change index from vue
Signed-off-by: Mikee Ramirez <mikee.rmz@gmail.com>

--- a/index.html
+++ b/index.html
@@ -1,122 +1,11 @@
-<!DOCTYPE html> 
-<html lang="es">
-<head>
-  <title>Curriculum Vitae Mikee</title>
-  <meta charset="utf-8" />
-  <meta name="description" content="CV de Miguel Ramirez">
-  <meta name="author" content="Mikee.rmz" />
-  <meta name="robots" content="all">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <link rel="stylesheet" href="stylesheets/normalize.css">
-  <link rel="stylesheet" href="stylesheets/styles.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-  <link rel="shortcut icon" href="https://mejorando.la/static/images/favicon.ico">
-</head>
-
-<body>
-
-  <header class="sidebar">
-    <section class="sidebar_information">
-      <div class="sidebar_userimage">
-        <img src="https://pbs.twimg.com/profile_images/557985645109334016/ShCKgR0j_400x400.jpeg">
-        <h1 class="sidebar_information_title">
-          Mikee Ramirez
-      </div>
-      <div class="comunidad-autoria">
-        <div class="nombre">
-          <!-- 2º Commit - Tu perfil Web -->
-          <p>Web Developer</p>
-        </div>
-      </div>
-    </section>
-    <ul>
-      <li>
-        <a href="https://www.facebook.com/mikee.ramirez" target="_blank">
-          <!-- 3º Commit - Redes Sociales -->
-          <p>Facebook</p>
-        </a>
-      </li>
-      <li>
-        <a href="https://twitter.com/mikeermz" target="_blank">
-          <p>Twitter</p>
-        </a>
-      </li>
-      <li>
-        <a href="https://www.linkedin.com/profile/view?id=324990768" target="_blank">
-          <p>LinkedIN</p>
-        </a>
-      </li>
-      <li>
-        <a href="https://github.com/Mikeermz" target="_blank">
-          <p>GitHub</p>
-        </a>
-      </li>
-    </ul>
-  </header>
-
-  <div class="layout-principal">
-    <div class="bloque">
-      <h3>OBJETIVO PROFESIONAL:</h3>
-      <p>Mi objetivo es ejérceme como desarrollador, es lo que me apasiona, me gusta ver un código y entenderlo, y si se puede mejorar hacerlo, soy una persona comprometida con mi trabajo, siempre con actitudes y aptitudes dentro y fuera del horario de trabajo. Soy una persona amable y cooperativa siempre ayudando a los compañeros de trabajo para salir adelante. Obedezco a mis superiores y veo las situaciones complejas y/o sencillas siempre como una buena retrospectiva ya que ayudan a mejorar el ambiente laboral y en mi persona. Siempre logro lo mejor en el trabajo para sentirme satisfecho al finalizar el día.</p>
-    </div>
-
-    <div class="bloque">
-      <h3>EXPERIENCIA LABORAL:</h3>
-      <ul class ="lista">
-        <li> BAHÍA ESCONDIDA / Agosto 2007- Enero 2008</li>
-        <li> Estudio ID / Enero 2008 - Marzo 2011 </li>
-        <li> Laboro - CAT BANAMEX / Enero 2011- Junio 2011</li>
-        <li> Aceros y Bombas / Junio  2011- Octubre 2011</li>
-        <li> AXTEL / Octubre 2011 – Septiembre 2014 </li>
-        <li> GEOPT DATA / Octubre 2014 </li>
-      </ul>
-    </div>
-    <div class="bloque">
-      <h3>CAPACIDADES PROFESIONALES:</h3>
-      <ul class ="lista"> 
-       <h4>Desarrollo de Software</h4>
-        <li> PHP (1 año de experiencia): Intermedio</li>
-        <li> JSon (1 año de experiencia): Intermedio</li>
-        <li> JavaScript, Ajax & jQuery (1 año de experiencia): Intermedio</li>
-        <li> Node.js (1 año de experiencia): Básico</li>
-        <li> C# (1 año de experiencia): Intermedio </li>
-        <li> Java (1 año de experiencia): Intermedio. </li>
-        <li> Python (1 año de experiencia): Intermedio </li>
-        <li>Django (6 meses de experiencia): Básico</li>
-      </ul>
-      <br>
-      <ul class ="lista"> 
-        <h4> Agile Software Development </h4>
-        <li> Git (1 año de experiencia): Intermedio</li>
-      </ul>
-      <ul class ="lista"> 
-        <h4> Base de datos </h4>
-        <li> MySQL (1 año de experiencia): Básico</li>
-        <li> SQL Server (1 año de experiencia): Básico</li>
-      </ul>
-      <ul class="lista">
-        <h4>Diseño Web</h4>
-        <li> HTML5 (2 años de experiencia): intermedio </li>
-        <li> CSS3 (2 años de experiencia): intermedio</li>
-        <li> Twitter Bootstrap CSS Framework (1 año de experiencia): Intermedio</li>
-        <li> Responsive Web Design (1 año de experiencia): Intermedio</li>
-      </ul>
-      <ul class="lista">
-        <h4>Sistemas Operativos</h4>
-        <li> MSDOS, Windows 95/98/ME, Windows 2000/NT/XP/Vista/7/8   </li>
-        <li> Distribuciones Linux (especialmente, basadas en Ubuntu)</li>
-        <li> Conocimientos a nivel avanzado en hardware</li>
-        <li> Alto conocimiento en limpieza y desinfección de virus informáticos y otros malwares</li> 
-      </ul>
-      <ul class="lista">
-        <h4> Idiomas</h4>
-        <li> Español: Lengua nativa</li>
-        <li> Inglés: Nivel intermedio</li>
-      </ul>
-    </div>
-  </div>
-
-    
-</body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>cv_mikee</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script src="/dist/build.js"></script>
+  </body>
 </html>
